Added jwt token
